@@ -1312,3 +1312,6 @@
 ! 詐騙電信 https://www.dcard.tw/f/anti_fraud/p/241812247
 ||morbleon.vip^
 ||oiujnjnuu.top^
+! 貸款詐騙 https://www.dcard.tw/f/anti_fraud/p/241821972$important
+!||hf7.tw^$important
+!||majipay.com.tw^$important
