@@ -1,5 +1,10 @@
 # 歷史更新 History Update
 
+* 20230422 Update
+  * 更新 個人不想看的廣告或網站
+  * 更新 Dcard受害文章
+  * 調整 優化自動更新List
+
 * 20230421 Update
   * 更新 個人不想看的廣告或網站
   * 更新 Dcard受害文章
